Add Section 6, reorganize demos, and add images

--- a/Section 5 - Understand Infrastructure as Code (IaC) Concepts/11. Benefits of Infrastructure as Code.md
+++ b/Section 5 - Understand Infrastructure as Code (IaC) Concepts/11. Benefits of Infrastructure as Code.md
@@ -4,6 +4,10 @@
 
 This lesson demonstrates the practical benefits of Infrastructure as Code (IaC) by comparing manual AWS resource provisioning with Terraform automation. The lab showcases how IaC simplifies cloud adoption, eliminates manual processes, and enables scalable infrastructure management.
 
+## Architecture
+
+![alt text](./Images/image.png)
+
 ## Concepts
 
 - **Manual vs. Automated Provisioning**: Comparison between console-based and code-based infrastructure deployment
